--- a/src/pages/WhatIsBactivate.module.css
+++ b/src/pages/WhatIsBactivate.module.css
@@ -27,15 +27,17 @@
     }
 }
 
-.textColumnTwo {
-    column-count: 1;
-    column-gap: 3rem;
+.infoGrid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 3rem;
     margin-top: 2rem;
 }
 
 @media (min-width: 960px) {
-    .textColumnTwo {
-        column-count: 2;
+    .infoGrid {
+        grid-template-columns: 1fr 1fr;
+        align-items: start;
     }
 }
 
